tests/baselines/reference/staticPrototypeProperty.errors.txt
staticPrototypeProperty.ts(2,11): error TS2300: Duplicate identifier 'prototype'.
staticPrototypeProperty.ts(2,11): error TS2699: Static property 'prototype' conflicts with built-in property 'Function.prototype' of constructor function 'C'.
staticPrototypeProperty.ts(6,11): error TS2699: Static property 'prototype' conflicts with built-in property 'Function.prototype' of constructor function 'C2'.


==== staticPrototypeProperty.ts (3 errors) ====
    class C {
       static prototype() { }
              ~~~~~~~~~
!!! error TS2300: Duplicate identifier 'prototype'.
              ~~~~~~~~~
!!! error TS2699: Static property 'prototype' conflicts with built-in property 'Function.prototype' of constructor function 'C'.
    }
     
    class C2 {
       static prototype;
              ~~~~~~~~~
!!! error TS2699: Static property 'prototype' conflicts with built-in property 'Function.prototype' of constructor function 'C2'.
    }